<resources>
    <string name="app_name">DatosPersonaListCarga</string>
    <string name="title">List</string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="unknown">Unknown</string>
    <string name="english">English: </string>
    <string name="date">Date: </string>
    <string name="age">Age: </string>
    <string name="drivingLicense">License: </string>
    <string name="phone">Phone: </string>

    <string name="english_level_low">Low</string>
    <string name="english_level_medium">Medium</string>
    <string name="english_level_high">High</string>

    <string name="activity_main_add_button">Add</string>
    <string name="activity_main_exit_button">Exit</string>
    <string name="activity_main_continue_button">Continue</string>
    <string name="activity_main_delete_dialog_title">Delete</string>
    <string name="activity_main_delete_dialog_description">Do you want to delete the user </string>

    <string name="activity_new_user_activity_name_input_text">Name</string>
    <string name="activity_new_user_activity_surname_input_text">Surname</string>
    <string name="activity_new_user_activity_age_input_text">Age</string>
    <string name="activity_new_user_activity_phone_input_text">Phone</string>
    <string name="activity_new_user_activity_driving_license_input_text">Driving License</string>
    <string name="activity_new_user_activity_english_level_input_text">English Level</string>
    <string name="activity_new_user_activity_english_level_low_input_text">Low</string>
    <string name="activity_new_user_activity_english_level_medium_input_text">Medium</string>
    <string name="activity_new_user_activity_english_level_high_input_text">High</string>
    <string name="activity_new_user_activity_date_input_text">Date</string>
    <string name="activity_new_user_activity_date_button">Change date</string>
    <string name="activity_new_user_activity_save_button">Save</string>
    <string name="activity_new_user_activity_reset_button">Restart</string>
    <string name="activity_new_user_activity_cancel_button">Cancel</string>


</resources>